terraform/stg/security_group.tf
resource "aws_security_group" "public" {
  name   = "${local.env}-public"
  vpc_id = module.vpc.vpc_id

  tags = {
    Name        = "${local.env}-public"
    Environment = "${local.env}"
  }
}

resource "aws_security_group_rule" "public_egress_allow_all" {
  type              = "egress"
  to_port           = 0
  protocol          = "-1"
  from_port         = 0
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.public.id
}

resource "aws_security_group_rule" "public_ingress_allow_443" {
  type              = "ingress"
  to_port           = 443
  protocol          = "tcp"
  from_port         = 443
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.public.id
}

resource "aws_security_group_rule" "public_ingress_allow_80" {
  type              = "ingress"
  to_port           = 80
  protocol          = "tcp"
  from_port         = 80
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.public.id
}

resource "aws_security_group" "private" {
  name   = "${local.env}-private"
  vpc_id = module.vpc.vpc_id

  tags = {
    Name        = "${local.env}-private"
    Environment = "${local.env}"
  }
}

resource "aws_security_group_rule" "private_egress_allow_all" {
  type              = "egress"
  to_port           = 0
  protocol          = "-1"
  from_port         = 0
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.private.id
}

resource "aws_security_group_rule" "private_ingress_allow_all" {
  type              = "ingress"
  to_port           = 0
  protocol          = "-1"
  from_port         = 0
  self              = true
  security_group_id = aws_security_group.private.id
}

resource "aws_security_group" "db" {
  name   = "${local.env}-db"
  vpc_id = module.vpc.vpc_id

  tags = {
    Name        = "${local.env}-db"
    Environment = "${local.env}"
  }
}

resource "aws_security_group_rule" "db_ingress_allow_all" {
  type              = "ingress"
  to_port           = 5432
  protocol          = "tcp"
  from_port         = 5432
  self              = true
  security_group_id = aws_security_group.db.id
}
